--- a/env/pyvenv.cfg
+++ b/env/pyvenv.cfg
@@ -1,5 +1,5 @@
 home = C:\Users\Alfraganus\AppData\Local\Programs\Python\Python311
 include-system-site-packages = false
-version = 3.11.1
+version = 3.11.4
 executable = C:\Users\Alfraganus\AppData\Local\Programs\Python\Python311\python.exe
-command = C:\Users\Alfraganus\AppData\Local\Programs\Python\Python311\python.exe -m venv e:\python\frameworks\remindme\env
+command = C:\Users\Alfraganus\AppData\Local\Programs\Python\Python311\python.exe -m venv D:\python\remindMe\env
